# prism-cache

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.vllm-lmcache-cluster.yml  docker-compose.vllm-lmcache.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
config/: prism.example.yaml  prism.production.yaml
deploy/: lmcache-config.remote.yaml  lmcache-config.yaml
docs/: ARCHITECTURE.md  BENCHMARKS.md  BUILD.md  GATEWAY.md  LMCACHE.md  OPERATIONS.md  ORG_SCENARIO.md  PRODUCTION.md  REPO_MANAGEMENT.md  SECURITY_REVIEW.md
eval/: __init__.py  benchmarks.py  run_benchmarks.py
examples/: faq_litellm_gemini.py  gemini_cache_probe.py  load_routes_from_config.py  org_scenario_tier3.py  phase_f_rag_vllm.py  phase_f_vllm_chat.py  production_app.py  proxy_lane_demo.py  rag_demo.py  rag_litellm_demo.py  tier1_faq_demo.py  tier2_faq_demo.py  tier3_load_test.py  tier4_rag_prompt.py
gateway/: litellm.full.yaml  litellm.gemini.yaml  litellm.multi.yaml  litellm.nim.yaml  litellm.prism.yaml  prism_callback.py
research/: fields.yaml  outline.yaml  report.md
tests/: test_benchmarks.py  test_factory.py  test_faq_pipeline.py  test_gemini_cache_probe.py  test_keys.py  test_litellm_client.py  test_lmcache_integration.py  test_org_scenario.py  test_phase_f_vllm_chat.py  test_pipeline.py  test_policy.py  test_prefix_metrics.py  test_prompt_audit.py  test_proxy_enforcement.py  test_routes.py  test_settings.py  test_tier0.py  test_tier1.py  test_tier2.py  (+3 more)
(+49 files in other folders)
