[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-cache"
version = "0.5.2"
description = "PRISM-Cache — Prompt Reuse & Inference Sharing Mesh for enterprise LLM caching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Sparsh Nagpal" }]
keywords = ["llm", "cache", "rag", "semantic-cache", "enterprise"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0"]
config = ["pyyaml>=6.0"]
gateway = ["litellm[proxy]>=1.40", "redis>=5.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "redis>=5.0", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/0sparsh2/prism-cache"
Repository = "https://github.com/0sparsh2/prism-cache"

[tool.hatch.build.targets.wheel]
packages = ["src/prism_cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
